fix: add stack in data project microapps

--- a/src/mock/project.json
+++ b/src/mock/project.json
@@ -46,12 +46,12 @@
     "content": "An app inspired by the social media platform Twitter, designed to facilitate interaction and communication within a more focused and organized community. Its main features include short message posting, multimedia content sharing, and retweet and like mechanisms similar to Twitter. Circle Apps aims to create an environment for sharing thoughts and interacting with people who share similar interests."
   },
   {
-    "id": 3,
+    "id": 2,
     "img": "Micro.png",
     "title": "Micro Logic",
     "frontend": [
       {
-        "name": "React",
+        "name": "Next.js",
         "icon": "react.png"
       },
       {
@@ -59,45 +59,20 @@
         "icon": "typescript.png"
       },
       {
-        "name": "ChakraUI",
-        "icon": "chakraUI.png"
-      },
-      {
-        "name": "Redux",
-        "icon": "redux.png"
+        "name": "TailwindCSS",
+        "icon": "tailwind2.png"
       }
     ],
-    "backend": [
-      {
-        "name": "Node.js",
-        "icon": "nodejs.png"
-      },
-      {
-        "name": "Typescript",
-        "icon": "typescript.png"
-      },
-      {
-        "name": "Express.JS",
-        "icon": "express.png"
-      },
-      {
-        "name": "Postgres",
-        "icon": "postgre.png"
-      },
-      {
-        "name": "Cloudinary",
-        "icon": "clouds.png"
-      }
-    ],
+    "backend": [],
     "content": "An app inspired by the social media platform Twitter, designed to facilitate interaction and communication within a more focused and organized community"
   },
   {
-    "id": 2,
+    "id": 3,
     "img": "trivia-apps.png",
     "title": "Trivia",
     "frontend": [
       {
-        "name": "React Native",
+        "name": "React_Native",
         "icon": "react.png"
       },
       {
