--- a/src/mock/project.json
+++ b/src/mock/project.json
@@ -3,6 +3,7 @@
     "id": 1,
     "img": "circle_apps.png",
     "title": "Circle Apss",
+    "content": "An app inspired by the social media platform Twitter, designed to facilitate interaction and communication within a more focused and organized community. Its main features include short message posting, multimedia content sharing, and retweet and like mechanisms similar to Twitter. Circle Apps aims to create an environment for sharing thoughts and interacting with people who share similar interests.",
     "frontend": [
       {
         "name": "React",
@@ -42,13 +43,13 @@
         "name": "Cloudinary",
         "icon": "clouds.png"
       }
-    ],
-    "content": "An app inspired by the social media platform Twitter, designed to facilitate interaction and communication within a more focused and organized community. Its main features include short message posting, multimedia content sharing, and retweet and like mechanisms similar to Twitter. Circle Apps aims to create an environment for sharing thoughts and interacting with people who share similar interests."
+    ]
   },
   {
     "id": 2,
     "img": "Micro.png",
     "title": "Micro Logic",
+    "content": "A website that has some simple but useful features, such as calculating duration, converting currencies, and word scrambling games. With an intuitive interface and diverse functionality, Micro Logic helps users complete everyday tasks more efficiently and enjoyably.",
     "frontend": [
       {
         "name": "Next.js",
@@ -63,13 +64,13 @@
         "icon": "tailwind.png"
       }
     ],
-    "backend": [],
-    "content": "A website that has some simple but useful features, such as calculating duration, converting currencies, and word scrambling games. With an intuitive interface and diverse functionality, Micro Logic helps users complete everyday tasks more efficiently and enjoyably."
+    "backend": []
   },
   {
     "id": 3,
     "img": "trivia-apps.png",
     "title": "Trivia",
+    "content": "A multiplayer application to guess a sound from categories such as animals, musical instruments, nature sounds, and everyday objects. Players select a category, listen to the sound played, and choose the most appropriate answer from several options provided. The app offers tiered difficulty levels, a points system and leaderboards to increase competition.",
     "frontend": [
       {
         "name": "React_Native",
@@ -101,7 +102,28 @@
         "name": "Postgres",
         "icon": "postgre.png"
       }
+    ]
+  },
+  {
+    "id": 4,
+    "img": "search-engine.png",
+    "title": "Search Engine",
+    "content": " This project is a simple search engine built using Nuxt.js and the Wikipedia API.  This project has a function to input / enter search keywords into the text input, and when the user presses the Enter key, the event listener calls the search method to perform the search.",
+    "frontend": [
+      {
+        "name": "Nuxt.js",
+        "icon": "vue.png"
+      },
+      {
+        "name": "Tailwind",
+        "icon": "tailwind.png"
+      }
     ],
-    "content": "A multiplayer application to guess a sound from categories such as animals, musical instruments, nature sounds, and everyday objects. Players select a category, listen to the sound played, and choose the most appropriate answer from several options provided. The app offers tiered difficulty levels, a points system and leaderboards to increase competition."
+    "backend": [
+      {
+        "name": "API_Wikipedia",
+        "icon": "api.png"
+      }
+    ]
   }
 ]
